下架课-添加直播中标示

--- a/wechat/src/main/webapp/xcview/html/unshelve.html
+++ b/wechat/src/main/webapp/xcview/html/unshelve.html
@@ -27,6 +27,20 @@
 	    }
 	}	
 </script>
+<style>
+	.course_list_mark{
+		width: 0.9rem;
+	    background: #F97B49;
+	    border-radius: 4px;
+	    text-align: center;
+	    font-size: 0.22rem;
+	    color: #fff;
+	    padding: 0 0.05rem;
+	    position: absolute;
+	    top: 0;
+	    right: 0;
+	}
+</style>
 </head>
 <body style="background:#efefef;" class="mui-ios mui-ios-11 mui-ios-11-0">
 	<!-- 头部开始 -->
@@ -36,7 +50,7 @@
 			<div class="header_return" onclick="javascript:history.go(-1);">
 				<img src="/xcview/images/back icon.png">
 			</div>
-			<div class="header_title">主播课程</div>
+			<div class="header_title">下架课程</div>
 		</div>
 	</header>
 	<!-- 头部结束 -->
@@ -54,6 +68,7 @@
 	   	    			<div class="course_list_one_img">
         					<img src="/xcview/images/Sinatv_auto.png" alt="" class="img0">
 	   	    				<img src="http://test-file.ipandatcm.com/18525190326/1603a80f1f384403.jpg?imageView2/2/w/339" class="img1">
+	   	    				<div class="course_list_mark">直播中</div>
 	   	    			</div>
 	   	    			<div class="course_list_one_title">副局级</div>
 	   	    			<div class="course_list_one_title_name">默默</div>
@@ -110,7 +125,7 @@
 	   	    			<div class="course_list_one_title">5.28视频收费1</div>
 	   	    			<div class="course_list_one_title_name">默默</div>
 	   	    			<div class="course_list_main_cen_one">
-							<p class="p0" style="margin-top: -0.02rem;"><span style="margin-top:0.5rem;">1</span><span class="span0_span">熊猫币</span></p>
+							<p class="p0" style="margin-top: -0.02rem;"><span style="margin-top:0.04rem;">1</span><span class="span0_span">熊猫币</span></p>
 	   	    				<p class="p1"><img src="/xcview/images/population.png" alt=""><span>4</span></p>
 	   	    			</div>
 	   	    		</div>
@@ -146,7 +161,7 @@
 	   	    			<div class="course_list_one_title_name">默默</div>
 	   	    			
 	   	    			<div class="course_list_main_cen_one">
-							<p class="p0" style="margin-top: -0.02rem;"><span>2</span><span class="span0_span">熊猫币</span></p>
+							<p class="p0" style="margin-top: -0.02rem;"><span style="margin-top:0.04rem;">2</span><span class="span0_span">熊猫币</span></p>
 	   	    				<p class="p1"><img src="/xcview/images/population.png" alt=""><span>2</span></p>
 	   	    			</div>
 	   	    		</div>
@@ -164,7 +179,7 @@
 	   	    			<div class="course_list_one_title_name">默默</div>
 	   	    			
 	   	    			<div class="course_list_main_cen_one">
-	   	    				<p class="p0" style="margin-top: -0.02rem;"><span>1</span><span class="span0_span">熊猫币</span></p>
+	   	    				<p class="p0" style="margin-top: -0.02rem;"><span style="margin-top:0.04rem;">1</span><span class="span0_span">熊猫币</span></p>
 	   	    				<p class="p1"><img src="/xcview/images/population.png" alt=""><span>4</span></p>
 	   	    				<p class="p2"><img src="/xcview/images/location_four.png" alt=""><span>天津市</span></p>
 	   	    			</div>
