--- a/wechat/src/main/webapp/xcview/html/unshelve.html
+++ b/wechat/src/main/webapp/xcview/html/unshelve.html
@@ -61,13 +61,13 @@
 		color: #999;
     	font-size: 0.22rem;
     	margin: 0 auto;
-	    margin-top: 1rem;
+	    margin-top: 1.3rem;
 	    text-align: center;
 	    
 	}
 </style>
 </head>
-<body style="background:#efefef;" class="mui-ios mui-ios-11 mui-ios-11-0">
+<body style="background:#f8f8f8;" class="mui-ios mui-ios-11 mui-ios-11-0">
 	<!-- 头部开始 -->
 	<header>
 		<div class="header">
