--- a/online-web/src/main/webapp/index2.html
+++ b/online-web/src/main/webapp/index2.html
@@ -459,7 +459,7 @@
 							</div>
 							<div class="zuozhe_inf">
 								<span><a href="/doctors/c654bcc007354244a6ba22cfd907f426" style="color: #0C0C0C" target="_blank">于瑞鑫 </a></span>
-								<p>课程：中医外治四期班第二季55</p>
+								<p>啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦拉拉阿拉拉拉啊啦啦啦</p>
 							</div>
 						</li>
 
@@ -471,7 +471,7 @@
 							</div>
 							<div class="zuozhe_inf">
 								<span><a href="/doctors/c654bcc007354244a6ba22cfd907f426" style="color: #0C0C0C" target="_blank">于瑞鑫 </a></span>
-								<p>课程：中医外治四期班第二季</p>
+								<p>啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦拉拉阿拉拉拉啊啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦拉拉阿拉拉拉啊啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦拉拉阿拉拉拉啊啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦拉拉阿拉拉拉啊啦啦啦</p>
 							</div>
 						</li>
 
@@ -483,7 +483,7 @@
 							</div>
 							<div class="zuozhe_inf">
 								<span><a href="/doctors/c654bcc007354244a6ba22cfd907f426" style="color: #0C0C0C" target="_blank">于瑞鑫 </a></span>
-								<p>课程：中医外治四期班第二季</p>
+								<p>啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦拉拉阿拉拉拉啊啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦拉拉阿拉拉拉啊啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦拉拉阿拉拉拉啊啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦拉拉阿拉拉拉啊啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦拉拉阿拉拉拉啊啦啦啦</p>
 							</div>
 						</li>
 					</ul>
