--- a/online-web/src/main/webapp/web/html/courseDetail.html
+++ b/online-web/src/main/webapp/web/html/courseDetail.html
@@ -31,7 +31,7 @@
 <body>
 <div id="course-list">
     <div class="nav" id="NoShowIntroduct">
-        <a href="/classroom.html">学堂</a><span> > </span><span class="myClassName" style="margin-left:0px"></span>
+        <a href="/courses/recommendation">学堂</a><span> > </span><span class="myClassName" style="margin-left:0px"></span>
     </div>
     <!--<div class="nav" id="showIntroduct">-->
         <!--<a href="../../index.html">云课堂</a><span> > </span><a class="myClassName" href=""></a><span> > </span><span-->
