--- a/wechat/src/main/webapp/xcview/html/unshelve.html
+++ b/wechat/src/main/webapp/xcview/html/unshelve.html
@@ -12,7 +12,6 @@
 <meta name="description" content="" />
 <!--手机嵌入模板-->
 <script type="text/javascript" src="/xcview/js/common/layout.js"></script>
-
 <link rel="stylesheet" href="/xcview/css/unshelve.css?version=e888934897">
 <!--下拉刷新引入的css-->
 <link rel="stylesheet" href="/xcview/css/mui.min.css">
@@ -72,7 +71,7 @@
 	<header>
 		<div class="header">
 			<div class="return" id="home_img"></div>
-			<div class="header_return" onclick="javascript:history.go(-1);">
+			<div class="header_return" onclick="common_share_back();">
 				<img src="/xcview/images/back icon.png">
 			</div>
 			<div class="header_title">课程已下架</div>
@@ -221,4 +220,9 @@
 	<!-- 底部结束 -->
 	<div class="both"></div>
 </body>
+<script type="text/javascript" src="/xcview/js/common/jquery.min-2.1.1.js"></script>
+<script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
+<script type="text/javascript" src="/xcview/js/common/common.js"></script>
+<script type="text/javascript" src="/xcview/js/common/template.js"></script>
+<script type="text/javascript" src="/xcview/js/unshelve.js?wechat_1.1"></script>
 </html>
