修改专辑--bug。增加，线下课提交页

--- a/wechat/src/main/webapp/xcview/html/live_album.html
+++ b/wechat/src/main/webapp/xcview/html/live_album.html
@@ -192,7 +192,7 @@
 				<script type="text/html" id="all_list_ul">
 				{{each items as item i}}
 				
-			        <li data-myvideo="{{item.directId}}" data-courseId="{{item.id}}">
+			        <li data-myvideo="{{item.directId}}" data-courseId="{{item.id}}" data-courseName="{{item.gradeName}}">
 						<p class='all_list_ul_li_p'>{{item.no}}&nbsp;{{item.gradeName}}</p>
 					</li>
 				
