--- a/online-web/src/main/webapp/web/html/personal-center/personal-index.html
+++ b/online-web/src/main/webapp/web/html/personal-center/personal-index.html
@@ -437,7 +437,7 @@
 								</div>	
 							</div>
 						<!--问答与论坛-->
-							<div class="content hide aa" id="show-set" >
+							<div class="content hide">
 								<!--我的问答-->
 								<div class="mune2-1">
 									<div class="question-forum">
