修改个人中心

--- a/online-web/src/main/webapp/web/html/personal-center/personal-index.html
+++ b/online-web/src/main/webapp/web/html/personal-center/personal-index.html
@@ -107,7 +107,7 @@
 							</li>
 							<li data-menu="menu2-1">
 								<div class="link"><i class="icomoon-icon-wenda"></i>问答与论坛<span class="" aria-hidden="true"></span></div>
-								<ul class="submenu">
+								<ul class="submenu tte">
 									<li><a href="javascript:;" data-menu="menu2-1">我的问答</a></li>
 									<li><a href="javascript:;" data-menu="menu2-2">我的论坛</a></li>
 								</ul>
@@ -437,7 +437,7 @@
 								</div>	
 							</div>
 						<!--问答与论坛-->
-							<div class="content hide">
+							<div class="content hide" id="aaa">
 								<!--我的问答-->
 								<div class="mune2-1">
 									<div class="question-forum">
@@ -1199,11 +1199,7 @@
 		
 		
 		<script src="/web/js/personal-center/personal-index.js" type="text/javascript" charset="utf-8"></script>	
-		<script>
-			
 	
-
-		</script>
 	</body>	
 		
 		
