筛选列表--直播和线下课程地址，修改3,4。我的--添加默认值。搜索-添加数据空时状态。下架课，数据联调。

--- a/wechat/src/main/webapp/xcview/html/my_homepage.html
+++ b/wechat/src/main/webapp/xcview/html/my_homepage.html
@@ -47,11 +47,11 @@
 
 				<div class="person_follow">
 					<div class="left_personal z">
-						<p>关注&nbsp;<span id="attentionid"></span></p>
+						<p>关注&nbsp;<span id="attentionid">0</span></p>
 					</div>
 					<div class="separate"></div>			
 					<div class="right_personal y">
-						粉丝&nbsp;<span id="fansid"></span>
+						粉丝&nbsp;<span id="fansid">0</span>
 					</div>
 				</div>
 				<!-- </script> -->
