--- a/wechat/src/main/webapp/xcview/html/search.html
+++ b/wechat/src/main/webapp/xcview/html/search.html
@@ -27,7 +27,14 @@
 	}	
 </script>
 <link rel="stylesheet" type="text/css" href="/xcview/css/search.css" />
-
+<style>
+	.search_hot{
+		margin-bottom: 0;
+	}
+	.search_history{
+		margin-top: 0.426rem;
+	}
+</style>
 </head>
 
 <body style="background: #F8F8F8;">
@@ -250,6 +257,13 @@
 		$("#header_input").click(function(){
 			$(".header_seek_main").css("display","none");
 		});
+
+		/*if($(".search_hot_main_one").html()==''){
+				$(".search_hot").hide();
+		}else{
+			alert(123);
+		};*/
+
 
 </script>
 
