--- a/wechat/src/main/webapp/xcview/html/line_class.html
+++ b/wechat/src/main/webapp/xcview/html/line_class.html
@@ -28,7 +28,7 @@
 	
 	<div class="main">
 		<div class="main_hint">
-			<div class="main_hint_img"><img src="/xcview/images/back icon.png" alt="" /></div>
+			<div class="main_hint_img"><img src="/xcview/images/line_class.png" alt="" /></div>
 			<div class="main_hint_size">为保障您的个人权益，请填写相应信息，便于活动提醒、入场时的身份确认、以及特殊通知的送达，以确保您能顺利进入会场，避免他人冒充。</div>
 		</div>
 		<div class="both"></div>
