--- a/wechat/src/main/webapp/xcview/html/live_play.html
+++ b/wechat/src/main/webapp/xcview/html/live_play.html
@@ -19,6 +19,8 @@
 	window.onorientationchange=function(){
 	    if(window.orientation==90||window.orientation==-90){
 	        window.location.reload();  /*横屏状态刷新*/
+	        
+	        
 	    }else{
 	        window.location.reload();  /*竖屏状态刷新*/
 	    }
@@ -61,19 +63,19 @@
 			<!--<img src="{{smallImgPath}}"/>-->
 			{{if lineState == 1}}
 			<!--视频开播-->
-			<a class="memory_lujin" data-memory="{{id}}" href="details.html?courseId={{id}}"></a>
+			<a class="memory_lujin" data-memory="{{id}}"  href="javascript:;"></a>
 			<div class="video_prompt_open">
 				<img src="../images/play_btn.png"/>
 			</div>
 			{{else if lineState == 3}}
 			<!--<a href="javascript:;" class="btn_returned"></a>-->	
-			<a class="memory_lujin" data-memory="{{id}}" href="details.html?courseId={{id}}"></a>
+			<a class="memory_lujin" data-memory="{{id}}" href="javascript:;"></a>
 			<div class="video_prompt_open">
 				<img src="../images/play_btn.png"/>
 			</div>
 
 			{{else if lineState == 4}}
-			<a class="memory_lujin" data-memory="{{id}}" href="details.html?courseId={{id}}"></a>
+			<a class="memory_lujin" data-memory="{{id}}" href="javascript:;"></a>
 			<div class="video_prompt_open">
 				<img src="../images/play_btn.png"/>
 			</div>
