--- a/wechat/src/main/webapp/xcview/html/person_fragment.html
+++ b/wechat/src/main/webapp/xcview/html/person_fragment.html
@@ -39,6 +39,12 @@
 		margin-top:0;
 		line-height: 0.4rem;
 	}
+	.user_mywrite p{
+		line-height: 0.4rem;
+	}
+	.user_mywrite div{
+		line-height: 0.4rem;
+	}
 	.both{
 		clear: both;
 	}
